--- a/docker/webserver/index.html
+++ b/docker/webserver/index.html
@@ -1,20 +1,13 @@
 <html>
   <body>
-    <h2>📡 Services</h2>
+    <h2>Services</h2>
     <ul>
-      <li><a href="http://localhost:1880">Node-RED</a></li>
-      <li><a href="http://localhost:3000">Grafana</a></li>
-      <li><a href="http://localhost:6052">ESPHome</a></li>
-      <li><a href="http://localhost:1883">Mosquitto MQTT (TCP)</a></li>
-      <li><a href="http://localhost">Web Dashboard</a></li>
+      <li><a href="http://<HOST_IP>:1880">Node-RED</a></li>
+      <li><a href="http://<HOST_IP>:3000">Grafana</a></li>
+      <li><a href="http://<HOST_IP>:6052">ESPHome</a></li>
+      <li><a href="http://<HOST_IP>:1883">Mosquitto MQTT (TCP)</a></li>
+      <li><a href="http://<HOST_IP>">Web Dashboard</a></li>
+      <li><a href="http://<HOST_IP>:8086">InfluxDB</a></li>
     </ul>
-    <h3>📦 Overige services</h3>
-    <ul>
-      <li><a href="http://localhost:8086">InfluxDB</a></li><html><body>
-<h2>📡 Services</h2>
-<ul>
-<li><a href="http://localhost:1880">Node-RED</a></li>
-<li><a href="http://localhost:3000">Grafana</a></li>
-<li><a href="http://localhost:6052">ESPHome</a></li>
-</ul>
-</body></html>
+  </body>
+</html>
