--- a/docker/webserver/index.html
+++ b/docker/webserver/index.html
@@ -5,8 +5,7 @@
       <li><a href="http://<HOST_IP>:1880">Node-RED</a></li>
       <li><a href="http://<HOST_IP>:3000">Grafana</a></li>
       <li><a href="http://<HOST_IP>:6052">ESPHome</a></li>
-      <li><a href="http://<HOST_IP>:1883">Mosquitto MQTT (TCP)</a></li>
-      <li><a href="http://<HOST_IP>">Web Dashboard</a></li>
+      <li>Mosquitto MQTT (TCP) is running at http://<HOST_IP>:1883</a></li>
       <li><a href="http://<HOST_IP>:8086">InfluxDB</a></li>
     </ul>
   </body>
