--- a/docker/webserver/index.html
+++ b/docker/webserver/index.html
@@ -2,6 +2,8 @@
   <body>
     <h2>Services</h2>
     <ul>
+      <li><a href="http://<HOST_IP>/add_team.html">Add team</a></li>
+      <li><a href="http://<HOST_IP>/add_user.html">Add user</a></li>
       <li><a href="http://<HOST_IP>:1880">Node-RED</a></li>
       <li><a href="http://<HOST_IP>:3000">Grafana</a></li>
       <li><a href="http://<HOST_IP>:6052">ESPHome</a></li>
