--- a/docker/webserver/add_user.html
+++ b/docker/webserver/add_user.html
@@ -53,7 +53,7 @@
         document.getElementById('result').innerText = 'User added!';
         this.reset();
       } else {
-        document.getElementById('result').innerText = 'Failed to add user.';
+        document.getElementById('result').innerText = response.statusText + ' Failed to add user.';
       }
     };
   </script>
