--- a/docker/webserver/index.html
+++ b/docker/webserver/index.html
@@ -2,7 +2,7 @@
   <body>
     <h2>Services</h2>
     <ul>
-      <li><a href="http://<HOST_IP>/list_users.html">Add team</a></li>
+      <li><a href="http://<HOST_IP>/list_users.html">List users</a></li>
       <li><a href="http://<HOST_IP>/add_team.html">Add team</a></li>
       <li><a href="http://<HOST_IP>/add_user.html">Add user</a></li>
       <li><a href="http://<HOST_IP>:1880">Node-RED</a></li>
